good progress. issues with news overflow. still some existing resizing issues.

--- a/src/index.css
+++ b/src/index.css
@@ -20,42 +20,46 @@ code {
 }
 
 .height-limit{
-  height:48.7%;
-  margin-bottom:10px;
+  height:50%;
+  /* margin-bottom:15px; */
 }
 
 div[class^='card-'], div[class*='card-']{
   border-color: #0000004b;
 }
 
-.card-ticker{
-  width: auto;
-  min-width: 60%;
-  /* height: 650px; */
-  height: 100%;
-  margin: 10px 10px 0px 10px;
-  float: left;
-}
-
 .news-stocks-col{
-  width: 35%;
+  margin: 0px 10px;
 }
 
 .card-news{
   width: auto;
   min-width: 100%;
-  /* height: 315px; */
   height: 100%;
-  margin: 10px;
-  overflow: scroll;
+  overflow-y: scroll;
+}
+
+.news-headline{
+  max-width:400px;
+  word-wrap:break-word;
 }
 
 .card-stocks{
   width: auto;
   min-width: 100%;
-  /* height: 315px; */
-  height: 98.9%;
-  margin: 10px;
+  margin-top: 10px;
+  overflow-y: auto;
+}
+
+.ticker-col{
+  margin:0px 10px;
+}
+
+.card-ticker{
+  width: 100%;
+  height: 100%;
+  float: left;
+  margin-bottom: 20px;
 }
 
 .card-graph{
@@ -66,21 +70,22 @@ div[class^='card-'], div[class*='card-']{
 }
 
 .graph-col{
-  width: 70%;
+  width: 100%;
 }
 
-
 .card-ticker-info{
-  height: 9.15%;
-  width: 100%;
+  width: 50%;
   margin-top: 0px;
   margin: 0px 10px 10px 10px;
 }
 
 .ticker-info-row{
-  width: 30%;
+  width: auto;
   min-width: 5%;
-  
+}
+
+.ticker-info-col{
+  min-width: 5%;
 }
 
 .footer{
